Tue Sep 25 06:49:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_3079/*:
          New regression test created by  Jaiganesh Balasubramanian

Tue Sep 25 05:06:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Server/ServerInterceptorAdapter.cpp:
        * tao/PortableServer/Upcall_Wrapper.cpp:
        * tao/PortableServer/Object_Adapter.cpp:
          Fixed some bugs introduced when renaming the reply_status
          method to pi_reply_status

Mon Sep 24 13:27:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Server.mpc:
          With BCB use -Q as workaround for a compiler bug with BCB6

Mon Sep 24 07:43:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CSD_Framework/CSD_FW_Server_Request_Wrapper.cpp:
        * tao/DynamicInterface/AMH_DSI_Response_Handler.cpp:
        * tao/DynamicInterface/DII_Invocation_Adapter.cpp:
        * tao/DynamicInterface/DII_Reply_Dispatcher.cpp:
        * tao/DynamicInterface/Request.cpp:
        * tao/DynamicInterface/Request.h:
        * tao/DynamicInterface/Server_Request.cpp:
        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Base.h:
        * tao/GIOP_Message_Generator_Parser.cpp:
        * tao/GIOP_Message_Generator_Parser.h:
        * tao/GIOP_Message_Generator_Parser_10.cpp:
        * tao/GIOP_Message_Generator_Parser_12.cpp:
        * tao/GIOP_Message_State.cpp:
        * tao/GIOP_Message_State.h:
        * tao/GIOP_Message_State.inl:
        * tao/GIOP_Utils.h:
        * tao/Invocation_Adapter.cpp:
        * tao/LocateRequest_Invocation.cpp:
        * tao/LocateRequest_Invocation.h:
        * tao/LocateRequest_Invocation_Adapter.cpp:
        * tao/LocateRequest_Invocation_Adapter.h:
        * tao/Messaging/AMH_Response_Handler.cpp:
        * tao/Messaging/AMH_Response_Handler.h:
        * tao/Messaging/AMI_Arguments_Converter_Impl.cpp:
        * tao/Messaging/Asynch_Invocation_Adapter.cpp: