@@ -1,3 +1,8 @@
+Tue Sep 25 07:13:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * utils/catior/catior.cpp:
+          Fixed incorrect checking of the return value of ACE_String_Base::find
+
 Tue Sep 25 06:49:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Portable_Interceptors/Bug_3079/*:
